src/objects/SBQQ__QuoteTerm__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTermExternalId__c</fullName>
        <formula>SBQQ__ParentTerm__r.ExternalId__c</formula>
        <label>ParentTermExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardTermExternalId__c</fullName>
        <formula>SBQQ__StandardTerm__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StandardTermExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateContentExternalId__c</fullName>
        <formula>SBQQ__TemplateContent__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateContentExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>